2005-04-05   Hubert Figuiere  <hfiguiere@teaser.fr>

	* camlibs/ptp: removing obsolete camlib.
	
2005-03-30 Hans Ulrich Niedermann <gp@n-dimensional.de>

	* libgphoto2/gphoto2-file.c: replace stricmp() by strcasecmp()
	  #include <gphoto2-port-portability.h> should take care of
	  portability of strcasecmp()

2005-02-07  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2/gphoto2-filesys.c:
	  Use the minimum of the 3 exif timestamps (time, capture time,
	  digitized time). This fixes use on the Traveller SX330Z as
	  reported.

2005-01-18  Marcus Meisser   <marcus@jet.franken.de>

	* po/ru.po: Update thanks to Vyacheslav Dikonov <sdiconov@mail.ru>

2005-01-17  Colin Marquardt  <colin@marquardt-home.de>

	* po/ja.po: Update thanks to Takeshi AIHANA.

2004-12-15  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in: 2.1.5

2004-11-26  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in: 2.1.5rc1

2004-11-26  Theodore Kilgore <kilgota@auburn.edu>

	* camlibs/iclick/*: New camera driver written by T. K. and 
	  Stephen Pollei <stephen_pollei@comcast.net>. 
	* configure.in: camlibs/iclick hooked up.
	* AUTHORS: authors of camlibs/iclick added.
	* MAINTAINERS: listed T. K. as the (current) maintainer. 

2004-11-18  Lutz Mueller <lutz@users.sourceforge.net>

	* camlibs/kodak/Makefile.am: Hook up the new ez200-driver.

2004-11-18  Lutz Mueller <lutz@users.sourceforge.net>

	* camlibs/kodak/ez200/*: New camera driver written by 
	  Edo <edo.bvdcorp@free.fr>. Slightly modified to remove some
	  warnings.
	* configure.in: Hook it up.
	  
2004-11-17  Hubert Figuiere  <hfiguiere@teaser.fr>

	* configure.in
	* camlibs/toshiba: Revert deletion of driver pdrm11

2004-11-17  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in
	* camlibs/toshiba: Removed on request of Sean Bruno
	  <sean.bruno@dsl-only.net> (camera is supported by sierra driver).

2004-10-28  Hubert Figuiere  <hfiguiere@teaser.fr>

	* libgphoto2/gphoto2-context.h: Fix build for gcc 2.95